# SocialSelling

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SDD_SocialSelling_v1.0.md  SECURITY.md  conftest.py  llm.txt  pyproject.toml  render.yaml  start.bat  start.sh  start_portal.bat
.ai/agents/: orquestracao-agentes.md
.ai/state/: PROGRESS.md
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: feedback_catalog.json  hypotheses_catalog.json  icp_criteria.example.json  icp_criteria.json  icp_criteria.talita.json  runtime.toml
docs/: licoes-aprendidas.md  overview.html
docs/analysis/: sondagem-talita.md
docs/architecture/: sdd_fase_2_implementation.md  sdd_fase_2_ui_ux_criteria.md
docs/contratos/: README.md
docs/decisions/: ADR-000-escopo-canonico.md  ADR-001-camada-intencao-hipoteses.md  ADR-002-ui-operador-local.md  ADR-003-orquestracao-langgraph.md  ADR-004-sensor-apollo.md  ADR-005-reforma-cognitiva-batch.md  ADR-006-corpus-acumulativo.md  ADR-007-aprendizado-feedback.md  ADR-008-mvp-aws-baas-desacoplado.md  ADR-009-write-aws-sob-gates-seguranca-finops.md  ADR-010-piloto-portal-operadora.md  ADR-011-processo-agentico-de-referencia.md
docs/governance/: devops-sre-iac.md  dor-dod.md  modo-operacional.md
docs/planning/: adr-008-backlog-plan.md  adr-010-backlog-plan.md  autonomous-ops.md  aws-tooling-eval.md  escala-volume-leads.md  execution-plan.md  roadmap-poc.md  versioning-strategy.md
docs/prompts/: gerar-hypotheses_catalog.md  gerar-icp.md  meta-prompt-governance.md
docs/runbooks/: portal-piloto.md
docs/specs/: apollo-busca-enriquecimento-incremental-sdd.md  borda-api-gateway-jwt-sdd.md  iac-multi-stack-aws-sdd.md  lead-results-table-ux-sdd.md  operator-cockpit-ui-sdd.md  orquestracao-paralela-finops-langgraph-sdd.md  persistencia-adapters-sdd.md  portal-operadora-piloto-sdd.md  ui-operador-local-spec.md
infra/iam/: README.md  github-actions-deploy-policy.json
scripts/: add_cards_to_project.ps1  bootstrap.ps1  bootstrap.sh  check_licoes.py  gate.ps1  gate.sh  new_card.ps1  probe_talita.py  record_apollo_fixtures.py  record_gemini_fixtures.py  record_tavily_fixtures.py  run_portal.py  seed_adr008_cards.py  seed_adr010_cards.py  seed_neon.py  setup_github_project.ps1  ship_wu.ps1  smoke_portal.py
specs/: 00_MVP_Busca.md  00_PreEspec.md  00_SetupInicial.md  SocialSelling_DevOps_Setup_Guide.md  SocialSelling_MVP_SDD_v1_1.md  definição inicial.md  master_context_agentes_ia.md  master_context_vibe_coding.md  meta-prompt-sdd-01.md  meta-prompt-sdd.md  prompt_devops_local.md  prompts_operacionais_agentes.md
specs/sdd/: sdd_01_product_vision_and_core_dag.md  (+11 more)
tests/: test_apollo_client.py  test_apollo_enrich.py  test_apollo_ladder.py  test_apollo_normalize.py  test_apollo_reveal.py  test_apollo_schemas.py  test_config_artifacts.py  test_contracts.py  test_corpus_integration.py  test_corpus_store.py  test_credit_ledger.py  test_feedback_store.py  test_gemini_client.py  test_learning_model.py  test_learning_tuner.py  test_m1_apollo.py  test_m2_batch.py  test_orchestrator_apollo.py  test_request_ledger.py  test_wave_queries.py  test_waves.py
(+117 files in other folders)
