[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialselling"
version = "0.1.0"
description = "Busca de clientes eficiente e automatica com IA — PoC local (database-less, Tavily + Gemini)"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
# UI de operador local (ADR-002): superficie opcional; o nucleo instala sem isto.
web = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "jinja2>=3.1",
]
dev = [
  "pytest>=8.0",
  "pytest-bdd>=7.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "jinja2>=3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/socialselling"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "smoke: cenario de fumaca cross-module (M1..M5 end-to-end)",
  "pipeline: cenario cross-module do orquestrador",
  "M1: modulo Busca (Tavily)",
  "M2: modulo Extracao (Gemini)",
  "M3: modulo Score",
  "M4: modulo Ranking",
  "M5: modulo Explicacao (XAI)",
  "objetivo: cenario de objetivo de negocio (ranking reflete a estrategia)",
]
